# turing-ocaml

./: README.md  dune  dune-project  flake.nix  turing.opam
test/: test_turing.ml
